feat: games documentation
